tests/parse-errors/types/array_size_not_literal.cx
int main() {
    int size = 3;
    int arr[size];
    return 0;
}
